# compilAR

./: .gitignore  4gpu  README.md  generated_4gpu.cu  main.py  pyproject.toml
compiler/: generate_pow2_cuda.py  generated_stragglar_16gpu.cuh  generated_stragglar_8gpu.cuh
resources/: 6gpu_schedule.txt  8gpu_schedule.txt
stragglar/: 12gpu  12gpu.cu  2gpusched.txt  4gpusched.txt  8gpu  8gpu.cu  8gpusched.txt  allreduce_2GPU  allreduce_2GPU.cu  allreduce_4GPU_rewrite.cu  allreduce_multinode  allreduce_multinode.cu  allreduce_multinode.cu.template  batch_compute.py  compilAR.py  compilar.def  compile_schedule.py  compiler.py  detect_straggler.py  generated_schedule.cu  gpu_bench.sub  launch.sh  rank_wrapper.sh  schedule_input.txt  schedule_to_nccl.py  smoketest.py  submit_smoketest.sh  synthesizer_pow2.py
stragglar/reference_code/: allreduce_4GPU.cu
stragglar/schedules/: 2gpusched.txt
stragglar/smoketest/: gpu_matmul_bench.py  matrixMultiplicationSmokeTest.py  pick_global_straggler.py  smoketest.py  smoketest.sub  submit_bench.sh
